# keycloak-tiny-introspect

./: .gitignore  README.md  pyproject.toml
src/keycloak_tiny_introspect/: __init__.py  app.py  types.py
tests/: test_types.py
