[project]
name = "keycloak-tiny-introspect"
version = "0.1.0"
description = ""
authors = [
    {name = "Anderson Bairo",email = "abairo@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "keycloak_tiny_introspect", from = "src"}]


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
